Finalizado ajustes gerais e tela de voluntários

--- a/src/app/modules/cadastro/comerciante/cadastro-comerciante/cadastro-comerciante.component.html
+++ b/src/app/modules/cadastro/comerciante/cadastro-comerciante/cadastro-comerciante.component.html
@@ -33,6 +33,10 @@
       <form #formComerciante="ngForm" (ngSubmit)="onSubmit()">
         <div class="card-header">
           <h3 class="card-title">Cadastro de comerciante</h3>
+
+          <a href="https://wa.me/5577999789680" target="_blank" class="card-subtitle text-orange">Precisando de ajuda
+            pra fazer o
+            seu cadastro? Clique aqui para falar conosco no WhatsApp <i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="card-body">
           <div class="row">
