--- a/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
+++ b/src/app/modules/home/detalhar-comerciante/detalhar-comerciante.component.html
@@ -31,24 +31,14 @@
 
       <div class="row no-padding">
         <div class="col-lg-6 col-sm-12">
-          <div class="title-pedido-giross">Entrega realizada pela <img src="assets/images/logo-giross.svg" /></div>
+          <div class="title-pedido-giross">Fazer pedido com a <img src="assets/images/logo-giross.svg" /></div>
 
           <div class="button-pedido-giross">
             <a href="https://wa.me/5577999789680" target="_blank" class="button-dark"><i class="fab fa-whatsapp"></i>
-              Pedido pelo whatsapp</a>
+              Fale conosco no WhatsApp</a>
           </div>
         </div>
 
-        <div class="col-lg-6 col-sm-12">
-          <div class="title-entrega-estabelecimento">
-            Entrega realizada pelo estabelecimento
-          </div>
-          <div class="button-pedido-estabelecimento">
-            <a class="button-brigth"
-              href="https://wa.me/55{{ comerciante.whatsapp | numberOnly }}?text=Conversa iniciada pelo Entrega SOS"
-              target="_blank"><i class="fab fa-whatsapp"></i> {{comerciante.whatsapp | phone }}</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
