--- a/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/modules/home/pagina-inicial/pagina-inicial.component.html
@@ -18,7 +18,7 @@
       Estabelecimentos</a>
     <a routerLink="/cadastro/comerciante/novo" routerLinkActive="router-link-active"
       class="button-home button-cadastrar button-brigth"><i class="fas fa-plus-circle"></i> Cadastrar meu
-      estabelecimento</a>
+      Estabelecimento</a>
   </div>
 
   <div class="home-buttons-voluntarios col-lg-12">
