--- a/src/app/modules/home/voluntarios/voluntarios.component.html
+++ b/src/app/modules/home/voluntarios/voluntarios.component.html
@@ -7,6 +7,7 @@
     <div class="button-brigth">
       <img class="foto-voluntario img-circle img-fluid img-thumbnail" src="{{ v.foto }}" />
       <p class="nome">{{ v.nome }}</p>
+      <p class="ocupacao">{{ v.ocupacao }}</p>
     </div>
 
     <div class="redes-sociais">
