--- a/src/app/modules/home/voluntarios/voluntarios.component.scss
+++ b/src/app/modules/home/voluntarios/voluntarios.component.scss
@@ -274,11 +274,12 @@
       top: 56px;
       left: 100px;
       font-weight: 300;
+      text-align: left;
     }
 
     .redes-sociais {
       position: absolute;
-      top: 90px;
+      top: 105px;
       height: 70px;
       left: 100px;
       width: 300px;
