Mais ajustes de texto

--- a/src/app/modules/home/lista-tipo-comercio/lista-tipo-comercio.component.html
+++ b/src/app/modules/home/lista-tipo-comercio/lista-tipo-comercio.component.html
@@ -1,5 +1,5 @@
-<h2>Tipo de comércio</h2>
-<p>Selecione o tipo de comércio que você está buscando</p>
+<h2>Estabelecimentos</h2>
+<p>Selecione o tipo de estabelecimentos que deseja para fazer suas compras</p>
 
 <div class="row" *ngIf="!showLoad else loading">
   <div class="col-sm-12 col-lg-4" *ngFor="let tipo of tipos">
