--- a/src/app/modules/home/lista-bairros/lista-bairros.component.html
+++ b/src/app/modules/home/lista-bairros/lista-bairros.component.html
@@ -1,5 +1,5 @@
 <h2>{{ tipoComercio?.nome }}</h2>
-<p>Selecione o seu bairro para encontrar estabelecimentos próximos a você que entregem suas compras</p>
+<p>Selecione o bairro mais próximo de você</p>
 
 <div class="row" *ngIf="!showLoad else loading">
   <div class="col-sm-12 col-lg-4" *ngFor="let bairro of bairros">
